err/datatools.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/datatools'...
Compiling './lib/python3.5/site-packages/datatools/cli.py'...
***   File "./lib/python3.5/site-packages/datatools/cli.py", line 53
    print scipy.stats.describe(values)
              ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/datatools/djson2geojson.py'...
***   File "./lib/python3.5/site-packages/datatools/djson2geojson.py", line 39
    print geojson
                ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/datatools/io.py'...
***   File "./lib/python3.5/site-packages/datatools/io.py", line 1
    import
          ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/datatools/stats.py'...
***   File "./lib/python3.5/site-packages/datatools/stats.py", line 8
    print col1, col2, pearsonr(data[:,col1], data[:,col2])
             ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/datatools-0.1.2.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
